--- a/terminal.html
+++ b/terminal.html
@@ -224,7 +224,7 @@
                 response = "https://ryancodes.xyz/privacy-policy";
                 break;
               case "IZTECH":
-                response = "Check out Iztech- my tech support company- at https://iztech.xyz. At Iztech, we help with anything tech related, for FREE.";
+                response = "Check out Iztech- my tech support company- at https://imryancodes.github.io/iztech/ (formally iztech.xyz). At Iztech, we help with anything tech related, for FREE.";
                 break;
               case "MYGAMES":
                 response = "https://ryancodes.xyz/games";
