Disclaimer for outdated links in archive

--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
         </div>
       </div>
     </div>
+    <p class="timeline-disclaimer">⚠️ <strong>Disclaimer:</strong> The links inside the archived versions above may not work as expected since they could be outdated or no longer maintained.</p>
     <p class="timeline-note">* There have been many more website updates (almost 300 as of 6/8/25!), but these are the major milestones in the journey. Also, please note that the above website versions are not necessarily mobile friendly.</p>
   </section>
 
