Updated Age to 14

--- a/terminal.html
+++ b/terminal.html
@@ -209,7 +209,7 @@
           if (command !== "") {
             switch (command) {
               case "WHOAMI":
-                response = "Hi my name is Ryan, I'm 13 and I Love coding. In my time coding, I have learned how to make apps, how to make websites, how to make artificial intelligence using Python, how to build cool projects with Arduinos, how to develop for a Minecraft server (Developed at 75,000+ member server), how to run a tech support firm, and finally how to make games using Godot and Unreal Engine.";
+                response = "Hi my name is Ryan, I'm 14 years old and I Love coding. In my time coding, I have learned how to make apps, how to make websites, how to make artificial intelligence using Python, how to build cool projects with Arduinos, how to develop for a Minecraft server (Developed at 75,000+ member server), how to run a tech support firm, and finally how to make games using Godot and Unreal Engine.";
                 break;
               case "CONTACT":
                 response = "Email me at ryan@ryancodes.xyz";
