--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/cursor.css">
+  <!-- React Grab - Development Only -->
+  <script>
+    // Load React Grab in development (localhost or file://)
+    if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' || window.location.protocol === 'file:') {
+      const script = document.createElement('script');
+      script.src = '//unpkg.com/react-grab/dist/index.global.js';
+      script.crossOrigin = 'anonymous';
+      document.head.appendChild(script);
+    }
+  </script>
 </head>
 <body>
   <!-- Custom Cursor Elements -->
