Made the terminal look more like an old monitor

--- a/terminal.html
+++ b/terminal.html
@@ -6,7 +6,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #222;
+      background-color: #1a1a1a;
+      background-image: 
+        radial-gradient(circle at 20% 50%, #0a0a0a 0%, transparent 50%),
+        radial-gradient(circle at 80% 80%, #0a0a0a 0%, transparent 50%);
       color: #fff;
       font-family: Consolas, monospace;
       font-size: 16px;
@@ -15,18 +18,101 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      overflow: hidden;
+    }
+
+    .monitor-frame {
+      position: relative;
+      width: 90vw;
+      height: 80vh;
+      max-width: 1600px;
+      max-height: 750px;
+      background: linear-gradient(145deg, #2a2a2a, #1a1a1a);
+      border: 25px solid #1a1a1a;
+      border-radius: 8px;
+      box-shadow: 
+        0 0 0 3px #0a0a0a,
+        inset 0 0 50px rgba(0, 0, 0, 0.8),
+        0 20px 60px rgba(0, 0, 0, 0.6),
+        inset 0 0 100px rgba(0, 255, 0, 0.05);
+      padding: 15px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .monitor-screen {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background-color: #0a0a0a;
+      border: 3px solid #000;
+      overflow: hidden;
+      box-shadow: 
+        inset 0 0 100px rgba(0, 255, 0, 0.1),
+        0 0 20px rgba(0, 255, 0, 0.2);
+    }
+
+    .scanlines {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: repeating-linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.15),
+        rgba(0, 0, 0, 0.15) 1px,
+        transparent 1px,
+        transparent 2px
+      );
+      pointer-events: none;
+      z-index: 10;
+      animation: scanline 8s linear infinite;
+    }
+
+    @keyframes scanline {
+      0% {
+        transform: translateY(0);
+      }
+      100% {
+        transform: translateY(4px);
+      }
+    }
+
+    .screen-flicker {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 255, 0, 0.03);
+      pointer-events: none;
+      z-index: 9;
+      animation: flicker 0.15s infinite;
+    }
+
+    @keyframes flicker {
+      0%, 100% {
+        opacity: 1;
+      }
+      50% {
+        opacity: 0.98;
+      }
     }
 
     .terminal {
       position: relative;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       background-color: #000;
       border: none;
       padding: 60px 20px 20px 20px;
       box-shadow: none;
       overflow: auto;
       display: block;
+      text-shadow: 
+        0 0 5px rgba(0, 255, 0, 0.5),
+        0 0 10px rgba(0, 255, 0, 0.3);
     }
 
     .matrix-effect {
@@ -47,6 +133,13 @@
     .output {
       color: #00ff00;
       margin-bottom: 10px;
+      text-shadow: 
+        0 0 5px rgba(0, 255, 0, 0.8),
+        0 0 10px rgba(0, 255, 0, 0.4);
+      max-width: 90%;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      word-break: break-word;
     }
 
     .output a {
@@ -61,11 +154,17 @@
     .command-line {
       display: flex;
       align-items: baseline;
+      max-width: 90%;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
     }
 
     .command-prompt {
       color: #00ff00;
       margin-right: 5px;
+      text-shadow: 
+        0 0 5px rgba(0, 255, 0, 0.8),
+        0 0 10px rgba(0, 255, 0, 0.4);
     }
 
     .command-input {
@@ -77,15 +176,81 @@
       font-size: inherit;
       flex-grow: 1;
       caret-color: #00ff00;
+      text-shadow: 
+        0 0 5px rgba(0, 255, 0, 0.8),
+        0 0 10px rgba(0, 255, 0, 0.4);
+    }
+
+    .monitor-brand {
+      position: absolute;
+      bottom: -35px;
+      left: 50%;
+      transform: translateX(-50%);
+      color: #666;
+      font-size: 12px;
+      font-family: Arial, sans-serif;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+
+    .monitor-controls {
+      position: absolute;
+      bottom: -35px;
+      right: 20px;
+      display: flex;
+      gap: 8px;
+    }
+
+    .monitor-button {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #333;
+      box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.5);
+    }
+
+    /* Fullscreen mode */
+    .monitor-frame:fullscreen,
+    .monitor-frame:-webkit-full-screen,
+    .monitor-frame:-moz-full-screen,
+    .monitor-frame:-ms-fullscreen {
+      width: 100vw;
+      height: 100vh;
+      max-width: 100vw;
+      max-height: 100vh;
+      border: 30px solid #1a1a1a;
+    }
+
+    body:fullscreen .monitor-frame,
+    body:-webkit-full-screen .monitor-frame,
+    body:-moz-full-screen .monitor-frame,
+    body:-ms-fullscreen .monitor-frame {
+      width: 100vw;
+      height: 100vh;
+      max-width: 100vw;
+      max-height: 100vh;
+      border: 30px solid #1a1a1a;
     }
   </style>
 </head>
 <body>
-  <div class="terminal" id="terminal">
-    <div class="matrix-effect" id="matrixEffect"></div>
-    <div class="command-line">
-      <div class="command-prompt">&gt;</div>
-      <input id="commandInput" class="command-input" type="text" onkeydown="handleCommand(event)">
+  <div class="monitor-frame">
+    <div class="monitor-screen">
+      <div class="screen-flicker"></div>
+      <div class="scanlines"></div>
+      <div class="terminal" id="terminal">
+        <div class="matrix-effect" id="matrixEffect"></div>
+        <div class="command-line">
+          <div class="command-prompt">&gt;</div>
+          <input id="commandInput" class="command-input" type="text" onkeydown="handleCommand(event)">
+        </div>
+      </div>
+    </div>
+    <div class="monitor-brand">RYANCODES TERMINAL</div>
+    <div class="monitor-controls">
+      <div class="monitor-button"></div>
+      <div class="monitor-button"></div>
+      <div class="monitor-button"></div>
     </div>
   </div>
 
@@ -115,15 +280,40 @@
 
     // Function to request fullscreen
     function requestFullscreen() {
-      const docEl = document.documentElement;
-      if (docEl.requestFullscreen) {
-        docEl.requestFullscreen();
-      } else if (docEl.mozRequestFullScreen) {
-        docEl.mozRequestFullScreen();
-      } else if (docEl.webkitRequestFullscreen) {
-        docEl.webkitRequestFullscreen();
-      } else if (docEl.msRequestFullscreen) {
-        docEl.msRequestFullscreen();
+      const monitorFrame = document.querySelector('.monitor-frame');
+      if (monitorFrame) {
+        if (monitorFrame.requestFullscreen) {
+          monitorFrame.requestFullscreen();
+        } else if (monitorFrame.mozRequestFullScreen) {
+          monitorFrame.mozRequestFullScreen();
+        } else if (monitorFrame.webkitRequestFullscreen) {
+          monitorFrame.webkitRequestFullscreen();
+        } else if (monitorFrame.msRequestFullscreen) {
+          monitorFrame.msRequestFullscreen();
+        } else {
+          // Fallback to document fullscreen
+          const docEl = document.documentElement;
+          if (docEl.requestFullscreen) {
+            docEl.requestFullscreen();
+          } else if (docEl.mozRequestFullScreen) {
+            docEl.mozRequestFullScreen();
+          } else if (docEl.webkitRequestFullscreen) {
+            docEl.webkitRequestFullscreen();
+          } else if (docEl.msRequestFullscreen) {
+            docEl.msRequestFullscreen();
+          }
+        }
+      } else {
+        const docEl = document.documentElement;
+        if (docEl.requestFullscreen) {
+          docEl.requestFullscreen();
+        } else if (docEl.mozRequestFullScreen) {
+          docEl.mozRequestFullScreen();
+        } else if (docEl.webkitRequestFullscreen) {
+          docEl.webkitRequestFullscreen();
+        } else if (docEl.msRequestFullscreen) {
+          docEl.msRequestFullscreen();
+        }
       }
       document.body.removeEventListener('click', requestFullscreen);
     }
