Added the new terminal update to the Website Evolution

--- a/index.html
+++ b/index.html
@@ -367,7 +367,16 @@
           <div class="timeline-content">
             <h3>Version 3.0</h3>
             <p class="timeline-date">Mid 2025</p>
-            <p class="timeline-description">The current version featuring modern redesign, improved performance, and enhanced user experience.</p>
+            <p class="timeline-description">The current version of the main site featuring modern redesign, that now includes a main site along with a separate terminal.</p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <h3>Version 3.5</h3>
+            <p class="timeline-date">Late 2025</p>
+            <p class="timeline-description">Significantly improved the terminal. The design went from the terminal in v2 to the terminal you see now.</p>
           </div>
         </div>
       </div>
