--- a/index.html
+++ b/index.html
@@ -85,13 +85,15 @@
           </label>
         </div>
         <!-- Terminal Pill -->
-        <a href="https://ryancodes.xyz/terminal" class="nav-pill nav-terminal" aria-label="Enter Terminal">
+        <a href="https://ryancodes.xyz/os" class="nav-pill nav-terminal" aria-label="Enter OS">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20">
-            <rect x="2" y="3" width="20" height="18" rx="2" ry="2" fill="#1e1e1e"/>
-            <polygon points="6,8 10,12 6,16" fill="#0f0"/>
-            <rect x="12" y="10" width="6" height="2" fill="#0f0"/>
+            <rect x="2" y="4" width="20" height="12" rx="2" ry="2" fill="#1e1e1e"/>
+            <rect x="4" y="6" width="16" height="8" fill="#333"/>
+            <rect x="6" y="8" width="4" height="4" fill="#0f0"/>
+            <rect x="12" y="8" width="6" height="2" fill="#0f0"/>
+            <rect x="6" y="16" width="12" height="2" rx="1" ry="1" fill="#666"/>
           </svg>
-          <span>ENTER TERMINAL</span>
+          <span>ENTER OS</span>
         </a>
       </div>
     </div>
