--- a/index.html
+++ b/index.html
@@ -386,7 +386,17 @@
           <div class="timeline-content">
             <h3>Version 3.5</h3>
             <p class="timeline-date">Late 2025</p>
-            <p class="timeline-description">Significantly improved the terminal. The design went from the terminal in v2 to the terminal you see now.</p>
+            <p class="timeline-description">Significantly improved the terminal. The design went from the terminal in v2 to a cool old school design.</p>
+            <a href="https://ryancodes.xyz/v3-5" class="timeline-link" target="_blank">View The Terminal From Version 3.5</a>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <h3>Version 4</h3>
+            <p class="timeline-date">Late 2025</p>
+            <p class="timeline-description">Replaced the terminal site with a new fresh take on a cool browser OS that has the terminal as an app.</p>
           </div>
         </div>
       </div>
