Minor tweak to the website archive

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           <div class="timeline-content">
             <h3>Version 3.0</h3>
             <p class="timeline-date">Mid 2025</p>
-            <p class="timeline-description">The current version of the main site featuring modern redesign, that now includes a main site along with a separate terminal.</p>
+            <p class="timeline-description">Essentially the current version of the main site featuring modern redesign, that now includes a main site along with a separate terminal.</p>
           </div>
         </div>
 
