--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <h3>Version 3.5</h3>
             <p class="timeline-date">Late 2025</p>
             <p class="timeline-description">Significantly improved the terminal. The design went from the terminal in v2 to a cool old school design.</p>
-            <a href="https://ryancodes.xyz/v3-5" class="timeline-link" target="_blank">View The Terminal From Version 3.5</a>
+            <a href="https://ryancodes.xyz/v3-5" class="timeline-link" target="_blank">View Version 3.5</a>
           </div>
         </div>
 
