Fixed mobile pop up

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
       </div>
     </div>
     <p class="timeline-disclaimer">⚠️ <strong>Disclaimer:</strong> The links inside the archived versions above may not work as expected since they could be outdated or no longer maintained.</p>
-    <p class="timeline-note">* There have been many more website updates (almost 300 as of 6/8/25!), but these are the major milestones in the journey. Also, please note that the above website versions are not necessarily mobile-friendly.</p>
+    <p class="timeline-note">* There have been many more website updates (300+ as of 12/27/25!), but these are the major milestones in the journey. Also, please note that the above website versions are not necessarily mobile-friendly.</p>
   </section>
 
   <!-- Modal Popup -->
@@ -410,7 +410,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h2>⚠️ Mobile Warning</h2>
-      <p>Terminal is not available on mobile devices. Please visit on a desktop device for the full experience.</p>
+      <p>RyOS is not available on mobile devices. Please visit on a desktop device for the full experience.</p>
     </div>
   </div>
 
