--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               <span class="tech-tag">CSS</span>
               <span class="tech-tag">JavaScript</span>
             </div>
-            <a href="https://imryancodes.github.io/iztech/" class="project-btn" target="_blank">View Project</a>
+            <a href="https://github.com/imryancodes/iztech" class="project-btn" target="_blank">View Code</a>
           </div>
           <div class="project-card">
             <img src="/Portfolio/EE.png" alt="Eco Educator" class="project-img" loading="lazy">
