--- a/os.html
+++ b/os.html
@@ -12,10 +12,9 @@
         }
 
         // Prevent loading OS within iframe to avoid infinite nesting
+        let isInIframe = false;
         if (window !== window.top) {
-            // If we're in an iframe, show message and redirect parent to the main site instead
-            alert("You can't access the OS from within the embedded browser! Redirecting back to the main site...");
-            window.top.location.href = "https://ryancodes.xyz";
+            isInIframe = true;
         }
     </script>
 
@@ -253,6 +252,48 @@
         .progress-fill { height: 100%; background: var(--accent); width: 0%; transition: width 0.1s linear; }
 
         .skill-tag { display: inline-block; background: var(--accent); color: white; padding: 6px 12px; border-radius: 20px; font-size: 12px; margin: 0 5px 5px 0; box-shadow: 0 2px 5px rgba(0,122,255,0.3); font-weight: 500; }
+
+        /* --- IFRAME WARNING POPUP --- */
+        #iframe-warning {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            z-index: 10000; display: flex; align-items: center; justify-content: center;
+        }
+        .warning-backdrop {
+            position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px);
+        }
+        .warning-modal {
+            position: relative; background: var(--glass-bg);
+            backdrop-filter: var(--liquid-filter); -webkit-backdrop-filter: var(--liquid-filter);
+            border: 1px solid var(--glass-border); border-radius: 16px;
+            padding: 30px; max-width: 400px; text-align: center;
+            box-shadow: var(--glass-shadow), inset 0 0 0 1px rgba(255,255,255,0.2);
+            animation: modalAppear 0.3s ease-out;
+        }
+        @keyframes modalAppear {
+            from { opacity: 0; transform: scale(0.9) translateY(-20px); }
+            to { opacity: 1; transform: scale(1) translateY(0); }
+        }
+        .warning-icon {
+            font-size: 48px; margin-bottom: 15px;
+        }
+        .warning-modal h2 {
+            color: #333; margin-bottom: 15px; font-size: 24px; font-weight: 600;
+        }
+        .warning-modal p {
+            color: #666; margin-bottom: 25px; line-height: 1.5; font-size: 14px;
+        }
+        .warning-btn {
+            background: var(--accent); color: white; border: none;
+            padding: 12px 24px; border-radius: 25px; font-size: 16px; font-weight: 600;
+            cursor: pointer; box-shadow: 0 4px 15px rgba(0,122,255,0.3);
+            transition: all 0.2s ease;
+        }
+        .warning-btn:hover {
+            background: #0056b3; transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0,122,255,0.4);
+        }
+        .warning-btn:active { transform: translateY(0); }
         
         iframe { border: none; width: 100%; height: 100%; }
         .contact-btn { background: var(--accent); color: white; border: none; padding: 12px 24px; border-radius: 20px; font-size: 16px; font-weight: bold; cursor: pointer; box-shadow: 0 4px 10px rgba(0,122,255,0.3); transition: transform 0.2s, background 0.2s; display: flex; align-items: center; gap: 8px; }
@@ -269,6 +310,17 @@
             <input type="password" id="passwordInput" placeholder="Enter Password">
         </div>
         <div class="hint-text" id="hintMsg">Hint: ry@n$123</div>
+    </div>
+
+    <!-- IFRAME WARNING POPUP -->
+    <div id="iframe-warning" style="display: none;">
+        <div class="warning-backdrop"></div>
+        <div class="warning-modal">
+            <div class="warning-icon">⚠️</div>
+            <h2>Access Denied</h2>
+            <p>You can't access the OS from within the embedded browser window. This would create infinite nesting!</p>
+            <button class="warning-btn" onclick="redirectIframe()">Go Back to Main Site</button>
+        </div>
     </div>
 
     <div id="desktop">
@@ -842,6 +894,29 @@
             }
         });
         audio.addEventListener('ended', () => { nextSong(); });
+
+        /* --- IFRAME WARNING LOGIC --- */
+        if (isInIframe) {
+            document.getElementById('iframe-warning').style.display = 'flex';
+        }
+
+        function redirectIframe() {
+            // Find the iframe that contains this OS and redirect it back to ryancodes.xyz
+            const iframes = window.top.document.querySelectorAll('iframe');
+            for (let iframe of iframes) {
+                try {
+                    if (iframe.contentWindow === window) {
+                        iframe.src = 'https://ryancodes.xyz';
+                        break;
+                    }
+                } catch (e) {
+                    // Cross-origin iframe, skip
+                    continue;
+                }
+            }
+            // Hide the warning
+            document.getElementById('iframe-warning').style.display = 'none';
+        }
 
     </script>
 </body>
