Updated projects layout

--- a/index.html
+++ b/index.html
@@ -184,75 +184,51 @@
     <section id="projects">
       <h2>My Public Projects</h2>
       
-      <!-- Project Carousel -->
-      <div class="carousel-container">
-        <div class="carousel-track">
-          <div class="project-card">
-            <img src="/Portfolio/War.png" alt="War Card Game" class="project-img" loading="lazy">
-            <h3>War Card Game</h3>
-            <p>A simple war card game I made for iOS using Swift.</p>
-            <div class="tech-stack">
-              <span class="tech-tag">Swift</span>
-              <span class="tech-tag">iOS</span>
-              <span class="tech-tag">SwiftUI</span>
-            </div>
-            <a href="https://apps.apple.com/us/app/war-card-game/id6478232396" class="project-btn" target="_blank">View Project</a>
+      <!-- Project Gallery -->
+      <div class="projects-gallery">
+        <div class="project-card">
+          <img src="/Portfolio/War.png" alt="War Card Game" class="project-img" loading="lazy">
+          <h3>War Card Game</h3>
+          <p>A simple war card game I made for iOS using Swift.</p>
+          <div class="tech-stack">
+            <span class="tech-tag">Swift</span>
+            <span class="tech-tag">iOS</span>
+            <span class="tech-tag">SwiftUI</span>
           </div>
-          <div class="project-card">
-            <img src="/Portfolio/Avg_platformer.png" alt="Average Platformer" class="project-img" loading="lazy">
-            <h3>Average Platformer</h3>
-            <p>A platformer I created using Godot.</p>
-            <div class="tech-stack">
-              <span class="tech-tag">Godot</span>
-              <span class="tech-tag">GDScript</span>
-              <span class="tech-tag">Game Dev</span>
-            </div>
-            <a href="https://ryancodes.itch.io/platformer" class="project-btn" target="_blank">View Project</a>
-          </div>
-          <div class="project-card">
-            <img src="/Portfolio/Iztech.png" alt="Iztech" class="project-img" loading="lazy">
-            <h3>Iztech</h3>
-            <p>A free tech support firm I created. (END OF LIFE)</p>
-            <div class="tech-stack">
-              <span class="tech-tag">HTML</span>
-              <span class="tech-tag">CSS</span>
-              <span class="tech-tag">JavaScript</span>
-            </div>
-            <a href="https://github.com/imryancodes/iztech" class="project-btn" target="_blank">View Code</a>
-          </div>
-          <div class="project-card">
-            <img src="/Portfolio/EE.png" alt="Eco Educator" class="project-img" loading="lazy">
-            <h3>Eco Educator</h3>
-            <p>An IOS app I created for learning how to recycle.</p>
-            <div class="tech-stack">
-              <span class="tech-tag">Swift</span>
-              <span class="tech-tag">iOS</span>
-              <span class="tech-tag">SwiftUI</span>
-            </div>
-            <a href="https://apps.apple.com/us/app/eco-educator/id6743406567" class="project-btn" target="_blank">View Project</a>
-          </div>
+          <a href="https://apps.apple.com/us/app/war-card-game/id6478232396" class="project-btn" target="_blank">View Project</a>
         </div>
-        
-        <!-- Carousel Navigation -->
-        <div class="carousel-nav">
-          <button class="carousel-prev" aria-label="Previous project">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-              <path fill="currentColor" d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-            </svg>
-            <span>Prev</span>
-          </button>
-          <div class="carousel-dots">
-            <button class="carousel-dot active" data-index="0" aria-label="Project 1"></button>
-            <button class="carousel-dot" data-index="1" aria-label="Project 2"></button>
-            <button class="carousel-dot" data-index="2" aria-label="Project 3"></button>
-            <button class="carousel-dot" data-index="3" aria-label="Project 4"></button>
+        <div class="project-card">
+          <img src="/Portfolio/Avg_platformer.png" alt="Average Platformer" class="project-img" loading="lazy">
+          <h3>Average Platformer</h3>
+          <p>A platformer I created using Godot.</p>
+          <div class="tech-stack">
+            <span class="tech-tag">Godot</span>
+            <span class="tech-tag">GDScript</span>
+            <span class="tech-tag">Game Dev</span>
           </div>
-          <button class="carousel-next" aria-label="Next project">
-            <span>Next</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-              <path fill="currentColor" d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
-            </svg>
-          </button>
+          <a href="https://ryancodes.itch.io/platformer" class="project-btn" target="_blank">View Project</a>
+        </div>
+        <div class="project-card">
+          <img src="/Portfolio/Iztech.png" alt="Iztech" class="project-img" loading="lazy">
+          <h3>Iztech</h3>
+          <p>A free tech support firm I created. (END OF LIFE)</p>
+          <div class="tech-stack">
+            <span class="tech-tag">HTML</span>
+            <span class="tech-tag">CSS</span>
+            <span class="tech-tag">JavaScript</span>
+          </div>
+          <a href="https://github.com/imryancodes/iztech" class="project-btn" target="_blank">View Code</a>
+        </div>
+        <div class="project-card">
+          <img src="/Portfolio/EE.png" alt="Eco Educator" class="project-img" loading="lazy">
+          <h3>Eco Educator</h3>
+          <p>An IOS app I created for learning how to recycle.</p>
+          <div class="tech-stack">
+            <span class="tech-tag">Swift</span>
+            <span class="tech-tag">iOS</span>
+            <span class="tech-tag">SwiftUI</span>
+          </div>
+          <a href="https://apps.apple.com/us/app/eco-educator/id6743406567" class="project-btn" target="_blank">View Project</a>
         </div>
       </div>
     </section>
