seo and optimization changes

--- a/games.html
+++ b/games.html
@@ -6,6 +6,6 @@
   		<meta http-equiv="refresh" content="1; URL=https://ryancodes.itch.io/" />
   	</head>
   	<body>
-  		<p>You are being redirected. If you are not redirected within 3 seconds, click <a href="https://https://ryancodes.itch.io/">here</a>.</p>
+  		<p>You are being redirected. If you are not redirected within 3 seconds, click <a href="https://ryancodes.itch.io/">here</a>.</p>
   	</body>
   </html>
