Minor text tweaks

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
             <path d="M10 4H2v16h20V6H12l-2-2z"/>
           </svg>
-          <span>My Public Projects</span>
+          <span>My Projects</span>
         </a>
         <!-- Skills Pill -->
         <a href="#skills" class="nav-pill">
@@ -465,7 +465,7 @@
       <a href="https://scrimba.com/?via=u435efec" class="scrimba-btn" target="_blank" rel="noopener noreferrer">
         Get 20% Off Scrimba Pro
       </a>
-      <p class="scrimba-disclosure">* Full disclosure: I do earn a commission if you use my link.</p>
+      <p class="scrimba-disclosure">* Full disclosure: I may earn a commission if you use my link.</p>
     </div>
   </section>
 
